地圖功能未完成:D

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".allactivity"/>
         <activity android:name=".nearact"/>
+        <activity android:name=".signup"/>
 
 
         </application>
