--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.roger.joinme">
 
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDgur1FCTuipsKVe9SLZJXeZJ7CTjzA_YY"/>
+        <permission android:name="com.example.project.DEBIT_ACCT" />
+        <uses-permission android:name="com.example.project.DEBIT_ACCT" /> <!--DEBIT_ACCT權限由app強制執行-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
