側選單可用： mapsActivity我包在home(新建的首頁activity裡面) 測試用側選單裡的個人頁面跟球類Btn 我有設監聽print"123" 但定位不見了 應該是程式沒copy到 再幫寫個：）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -63,6 +64,11 @@
         <activity
             android:name=".allactivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".home"
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
         <activity
             android:name=".joinact"
             android:theme="@style/AppTheme.NoActionBar" />
