--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
+//    implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+
 
 
 }
