--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
 //    implementation 'com.google.android.libraries.places:places:2.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
-
-
+    implementation 'com.google.android.libraries.places:places:2.2.0'
 
 }
