--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
 //    implementation 'com.google.android.libraries.places:places:2.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.contrarywind:Android-PickerView:4.1.9'
+    implementation 'com.github.zyyoona7:wheelview:1.0.7'
 
 }
