--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.2.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.github.zyyoona7:wheelview:1.0.7'
+    implementation 'com.wx.wheelview:wheelview:1.3.3'
+
 
 }
