列表頁面完成剩連結

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,9 @@
         <activity
             android:name=".verify"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".noticeupdate"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
