--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.github.zyyoona7:wheelview:1.0.7'
     implementation 'com.wx.wheelview:wheelview:1.3.3'
+    implementation "com.android.support:support-compat:28.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:design:1.0.3'
 
