--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation "androidx.navigation:navigation-fragment:2.0.0"
     implementation "androidx.navigation:navigation-ui:2.0.0"
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -67,6 +67,8 @@ dependencies {
     implementation "com.android.support:support-compat:28.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:design:1.0.3'
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
 
 }
