--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation "com.android.support:support-compat:28.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:design:1.0.3'
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
 
