--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".register" />
         <activity android:name=".noticetest" />
+        <activity android:name=".testsetting" />
         <activity android:name=".testmain" />
         <activity android:name=".forgetpwd" />
         <activity android:name=".informationedit" />
