--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,11 +95,6 @@
             android:label="@string/title_activity_homepage"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".allactivity"
@@ -121,6 +116,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".holdonact"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ChatActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".signup"
