--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,8 @@
             android:label="@string/title_activity_homepage"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".register" />
+        <activity android:name=".totalEvaluteActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".friend_request"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".ProfileActivity"
