個人頁面點評價補上分類按鈕

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,8 @@
         <activity
             android:name=".favoriteActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".separateEvaluateActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".home"
             android:theme="@style/AppTheme.NoActionBar">
